# InsightPilot

./: .gitignore  LICENSE  README.md  SETUP.md  desgin.md  todo.txt
backend/: Dockerfile  alembic.ini  create_tables.py  env.example  pyproject.toml  requirements.txt  run.cmd  test_api.py  test_dash.py
backend/alembic/: env.py
backend/alembic/versions/: 7b167543c137_add_user_auth_and_org_tables.py  a1b2c3d4e5f6_add_activity_logs_table.py  a3c8f1e2d456_add_visualizations_tables.py  b7e2a3f19c54_drop_query_result_from_visualizations.py  c4d9e2f18a67_add_dashboards_tables.py  convert_dashboard_visibility_to_enum.py  d5b4549f7c88_add_token_version_to_users.py  e6a3b7d24f91_add_mongodb_to_ds_type_enum.py  f7b2c8d35a12_add_use_ssl_to_data_sources.py  fa57497ead90_add_data_sources_table.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: activity.py  auth.py  dashboards.py  datasources.py  health.py  introspection.py  orgs.py  profile.py  query.py  users.py  visualizations.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: activity_service.py  auth_service.py  dashboard_service.py  datasource_service.py  gemini_service.py  insight_service.py  introspection_service.py  org_service.py  overview_service.py  query_service.py  user_service.py  visualization_service.py
backend/tests/: test_health.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: HomeRedirect.tsx  (+4 more)
(+47 files in other folders)
